// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match the snapshot 1`] = `
<styled.div
  alignItems="center"
  flexDirection="row"
  height="100%"
  justifyContent="space-between"
  overflow="auto"
  padding="5px 0"
  width="100%"
>
  <Heading
    color="#000000"
    component="h4"
    cursor="initial"
  />
  <styled.label
    isOnLeft={true}
  >
    <styled.input
      onChange={[Function]}
      type="checkbox"
    />
  </styled.label>
</styled.div>
`;

exports[`Checkbox should match the snapshot when checked 1`] = `
<styled.div
  alignItems="center"
  flexDirection="row"
  height="100%"
  justifyContent="space-between"
  overflow="auto"
  padding="5px 0"
  width="100%"
>
  <Heading
    color="#000000"
    component="h4"
    cursor="initial"
  />
  <styled.label
    isOnLeft={true}
  >
    <styled.input
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
  </styled.label>
</styled.div>
`;

exports[`Checkbox should match the snapshot with label 1`] = `
<styled.div
  alignItems="center"
  flexDirection="row"
  height="100%"
  justifyContent="space-between"
  overflow="auto"
  padding="5px 0"
  width="100%"
>
  <Heading
    color="#000000"
    component="h4"
    cursor="initial"
    label="Mock"
  />
  <styled.label
    isOnLeft={true}
  >
    <styled.input
      onChange={[Function]}
      type="checkbox"
    />
  </styled.label>
</styled.div>
`;
